# WASMBD

./: Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: main.rs
agent/tests/: integration_test.rs
controller/: Cargo.toml
controller/src/: main.rs  models.rs
controller/tests/: integration_test.rs
plugins/hello-world/: Cargo.toml
plugins/hello-world/src/: lib.rs
