[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
wasmtime = "38.0.1"
anyhow = "1.0"
wasmtime-wasi = "38.0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"